fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Arterial_PYTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>Arterial_PYTD_Sales__c</fullName>
    <label>Arterial PYTD Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>