fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Arterial_Total_Sales_Objective__c.field-meta.xml
<CustomField>
    <fullName>Arterial_Total_Sales_Objective__c</fullName>
    <label>Arterial Total Sales Objective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>