fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Arterial_YOY_Growth__c.field-meta.xml
<CustomField>
    <fullName>Arterial_YOY_Growth__c</fullName>
    <label>Arterial YOY Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>