fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Arterial_YTD_To_Quota__c.field-meta.xml
<CustomField>
    <fullName>Arterial_YTD_To_Quota__c</fullName>
    <formula>if( or(Arterial_YOY_Growth__c = 0, Arterial_Growth_Objective__c = 0),0,Arterial_YOY_Growth__c/Arterial_Growth_Objective__c)</formula>
    <label>Arterial YTD % To Quota</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>