fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Current_YTD_Objective__c.field-meta.xml
<CustomField>
    <fullName>Current_YTD_Objective__c</fullName>
    <label>Current YTD Objective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>