fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/CVC_Rank__c.field-meta.xml
<CustomField>
    <fullName>CVC_Rank__c</fullName>
    <label>CVC Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>