fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/CVC_YTD_to_Quota__c.field-meta.xml
<CustomField>
    <fullName>CVC_YTD_to_Quota__c</fullName>
    <formula>if( or(CVC_CYTD_Sales__c = 0, CVC_Growth_Objective__c = 0),0,CVC_CYTD_Sales__c/CVC_Growth_Objective__c)</formula>
    <label>CVC YTD % to Quota</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>