fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Effective_Month__c.field-meta.xml
<CustomField>
    <fullName>Effective_Month__c</fullName>
    <label>Effective Month</label>
    <length>64</length>
    <type>Text</type>
</CustomField>