fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Month_Number__c.field-meta.xml
<CustomField>
    <fullName>Month_Number__c</fullName>
    <formula>if(left(Effective_Month__c,3) = &quot;Jan&quot;,1,if( left(Effective_Month__c,3) = &quot;Feb&quot;,2,if( left(Effective_Month__c,3) = &quot;Mar&quot;,3,if( left(Effective_Month__c,3) = &quot;Apr&quot;,4,if( left(Effective_Month__c,3) = &quot;May&quot;,5,if( left(Effective_Month__c,3) = &quot;Jun&quot;,6,if( left(Effective_Month__c,3) = &quot;Jul&quot;,7,if( left(Effective_Month__c,3) = &quot;Aug&quot;,8,if( left(Effective_Month__c,3) = &quot;Sep&quot;,9,if( left(Effective_Month__c,3) = &quot;Oct&quot;,10,if( left(Effective_Month__c,3) = &quot;Nov&quot;,11,if( left(Effective_Month__c,3) = &quot;Dec&quot;,12,0))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>