fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Over_Quota_Rank__c.field-meta.xml
<CustomField>
    <fullName>Over_Quota_Rank__c</fullName>
    <label>$ Over Quota Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>