fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/PICC_VPS_Rank__c.field-meta.xml
<CustomField>
    <fullName>PICC_VPS_Rank__c</fullName>
    <label>PICC/VPS Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>