fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/PICC_VPS_YOY_Growth__c.field-meta.xml
<CustomField>
    <fullName>PICC_VPS_YOY_Growth__c</fullName>
    <label>PICC/VPS YOY Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>