fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/PICC_VPS_YTD_To_Quota__c.field-meta.xml
<CustomField>
    <fullName>PICC_VPS_YTD_To_Quota__c</fullName>
    <formula>if( or(PICC_VPS_CYTD_Sales__c = 0, PICC_VPS_Growth_Objective__c = 0),0,PICC_VPS_CYTD_Sales__c/PICC_VPS_Growth_Objective__c)</formula>
    <label>PICC/VPS YTD % To Quota</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>