fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Quota Product Family that the Product of Interest belongs to for Vascular Sales</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Venous Access</fullName>
            </value>
            <value>
                <fullName>PICCs</fullName>
            </value>
            <value>
                <fullName>Arterial</fullName>
            </value>
            <value>
                <fullName>VasoNova</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Airway</fullName>
            </value>
            <value>
                <fullName>Pain Mangement</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Ligation</fullName>
            </value>
            <value>
                <fullName>Suture</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Skin Stapling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>