fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Rank_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Rank_Current_Month__c</fullName>
    <label>Rank Current Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>