fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Rookie__c.field-meta.xml
<CustomField>
    <fullName>Rookie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rookie</label>
    <type>Checkbox</type>
</CustomField>