fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Territory_Master__c.field-meta.xml
<CustomField>
    <fullName>Territory_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Territory Master</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Quotas</relationshipLabel>
    <relationshipName>Quotas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>