fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Total_Current_YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_YTD_Sales__c</fullName>
    <label>Total Current YTD Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>