fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Vidacare_YOY_Growth__c.field-meta.xml
<CustomField>
    <fullName>Vidacare_YOY_Growth__c</fullName>
    <label>Vidacare YOY Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>