fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/Vidacare_YTD_Growth_Objective__c.field-meta.xml
<CustomField>
    <fullName>Vidacare_YTD_Growth_Objective__c</fullName>
    <label>Vidacare YTD Growth Objective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>