fullSandbox11072023/force-app/main/default/objects/Quota__c/fields/YTD_to_Quota__c.field-meta.xml
<CustomField>
    <fullName>YTD_to_Quota__c</fullName>
    <label>YTD % to Quota</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>