fullSandbox11072023/force-app/main/default/objects/Quota__c/recordTypes/AR_Manager_Quota.recordType-meta.xml
<RecordType>
    <fullName>AR_Manager_Quota</fullName>
    <active>true</active>
    <label>AR Manager Quota</label>
</RecordType>