fullSandbox11072023/force-app/main/default/objects/Quota__c/recordTypes/AR_Rep_Quota.recordType-meta.xml
<RecordType>
    <fullName>AR_Rep_Quota</fullName>
    <active>true</active>
    <label>AR Rep Quota</label>
</RecordType>