fullSandbox11072023/force-app/main/default/objects/Quota__c/recordTypes/IA_Rep_Quota.recordType-meta.xml
<RecordType>
    <fullName>IA_Rep_Quota</fullName>
    <active>true</active>
    <label>IA Rep Quota</label>
</RecordType>