fullSandbox11072023/force-app/main/default/objects/Quota__c/recordTypes/IA_RSM_Quota.recordType-meta.xml
<RecordType>
    <fullName>IA_RSM_Quota</fullName>
    <active>true</active>
    <label>IA RSM Quota</label>
</RecordType>