fullSandbox11072023/force-app/main/default/objects/Quota__c/recordTypes/Vascular_Manager_Quota.recordType-meta.xml
<RecordType>
    <fullName>Vascular_Manager_Quota</fullName>
    <active>true</active>
    <label>Vascular Manager Quota</label>
</RecordType>