fullSandbox11072023/force-app/main/default/objects/Quota__c/recordTypes/Vascular_Rep_Quota.recordType-meta.xml
<RecordType>
    <fullName>Vascular_Rep_Quota</fullName>
    <active>true</active>
    <label>Vascular Rep Quota</label>
</RecordType>