fullSandbox11072023/force-app/main/default/objects/Quota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Territory_Master__c</columns>
    <columns>Over_Quota_Rank__c</columns>
    <columns>To_Quota_Rank__c</columns>
    <columns>Current_YTD_Objective__c</columns>
    <columns>Rank_Current_Month__c</columns>
    <columns>Rank_Previous_Month__c</columns>
    <columns>Total_Current_YTD_Sales__c</columns>
    <columns>Total_Current_YTD_Sales_Growth__c</columns>
    <columns>Total_Previous_YTD_Sales__c</columns>
    <columns>YTD_Over_Quota__c</columns>
    <columns>YTD_to_Quota__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Teleflex_Global_IT</role>
    </sharedTo>
</ListView>