fullSandbox11072023/force-app/main/default/objects/Quota__c/listViews/IA_Rep_Ranking.listView-meta.xml
<ListView>
    <fullName>IA_Rep_Ranking</fullName>
    <columns>NAME</columns>
    <columns>Over_Quota_Rank__c</columns>
    <columns>To_Quota_Rank__c</columns>
    <columns>Current_YTD_Objective__c</columns>
    <columns>Effective_Month__c</columns>
    <columns>Rank_Current_Month__c</columns>
    <columns>Rank_Previous_Month__c</columns>
    <columns>Rookie__c</columns>
    <columns>Territory_Master__c</columns>
    <columns>Total_Current_YTD_Sales__c</columns>
    <columns>Total_Current_YTD_Sales_Growth__c</columns>
    <columns>Total_Previous_YTD_Sales__c</columns>
    <columns>Total_Score__c</columns>
    <columns>YTD_Over_Quota__c</columns>
    <columns>YTD_to_Quota__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Quota__c.IA_Rep_Quota</value>
    </filters>
    <label>IA Rep Ranking</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Anesthesia_President</roleAndSubordinates>
    </sharedTo>
</ListView>